k8s/postgres-multi-node/pgadmin.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: coinlog-pgadmin
  namespace: coinlog
  labels:
    app: coinlog-pgadmin
spec:
  replicas: 1
  selector:
    matchLabels:
      app: coinlog-pgadmin
  template:
    metadata:
      labels:
        app: coinlog-pgadmin
        tier: admin
    spec:
      containers:
        - name: coinlog-pgadmin
          image: dpage/pgadmin4
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 80
          volumeMounts:
            - mountPath: /var/lib/pgadmin
              name: coinlog-pgadmin-data
      volumes:
        - name: coinlog-pgadmin-data
          persistentVolumeClaim:
            claimName: coinlog-pgadmin-pv
---
apiVersion: v1
kind: Service
metadata:
  name: coinlog-pgadmin-svc
  namespace: coinlog
  labels:
    app: coinlog-pgadmin
spec:
  type: NodePort
  ports:
    - port: 80
      name: http
      protocol: TCP
      targetPort: 80
  selector:
    app: coinlog-pgadmin
